--- a/css/index.css
+++ b/css/index.css
@@ -293,6 +293,7 @@ p {
 	font-size: 1.25rem;
 	padding: .5rem .25rem;
 	margin-bottom: .75rem;
+        color: #ffffff;
 }
 
 #contact form button {
