--- a/css/media.css
+++ b/css/media.css
@@ -1,11 +1,14 @@
 @media screen and (min-width: 600px) {
-	#nav-btn {
-		display: none;
+	section h2 {
+		width: 40%;
 	}
 
-	.nav #nav-links {
-		display: flex;
-		justify-content: space-around;
+	.brand-title {
+		font-size: 1.5rem;
+	}
+
+	.brand-msg {
+		font-size: 1rem;
 	}
 
 	.card-container .card {
@@ -13,22 +16,45 @@
 	}
 }
 
-@media screen and (min-width: 768px) {
-	.header {
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
-		min-height: 15vh;
-		max-height: 20vh;
+@media (max-width: 767px) {
+	.nav-links {
+		display: none;
+		flex-direction: column;
+		position: absolute;
+		top: 60px;
+		left: 0;
+		width: 100%;
+		background-color: white;
+		color: white;
 	}
 
-	.nav {
+	.nav-links.active {
+		display: flex;
+	}
+
+	.nav-links li {
+		margin: 10px 0;
+	}
+
+	.footer {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-around;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.nav-toggle {
 		display: none;
 	}
 
-	.nav-sm {
-		display: block;
-		flex-basis: 50%;
+	.header {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		min-height: 15vh;
+		max-height: 20vh;
 	}
 
 	.nav-links {
@@ -36,6 +62,7 @@
 		justify-content: space-around;
 		background-color: white;
 		list-style: none;
+		width: 40vw;
 	}
 
 	.nav-link {
@@ -66,6 +93,17 @@
 
 	#explore .card-container > a:nth-child(3) {
 		margin: auto;
+	}
+
+	.contact-wrapper {
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+	}
+
+	.contact-main,
+	#contact form {
+		flex-basis: 44%;
 	}
 
 	#contact form {
