--- a/css/index.css
+++ b/css/index.css
@@ -20,11 +20,17 @@ h6 {
 	letter-spacing: .2rem;
 }
 
-section h2 {
-	margin: auto;
+section {
+	text-align: center;
+}
+
+section h2, #blog h2 {
 	color: #800000;
 	font-size: 1.5rem;
 	border-bottom: 1px solid #800000;
+	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
 	padding-bottom: 1rem;
 	margin-bottom: 1rem;
 	text-align: center;
@@ -252,6 +258,7 @@ p {
 	justify-content: space-between;
 	flex-direction: column;
 	flex-wrap: wrap;
+	text-align: left;
 }
 
 #explore .card-container > a {
@@ -286,6 +293,7 @@ p {
 	padding: 1rem;
 	background-color: white;
 	color: black;
+	font-family: 'Roboto', sans-serif;
 }
 
 .contact-main {
@@ -304,7 +312,6 @@ p {
 #contact .address {
 	margin: 1rem auto;
 	text-align: center;
-	font-family: Arial, Helvetica, sans-serif;
 }
 
 #contact .contact-form {
@@ -317,6 +324,7 @@ p {
 	font-family: 'Lobster', cursive;
 	letter-spacing: .25rem;
 	font-weight: 200;
+	color: #800000;
 }
 
 .contact-form input[type="text"],
@@ -397,10 +405,10 @@ p {
 
 #blog {
 	padding: 1rem;
+	text-align: center;
 }
 
 #blog h2 {
-	color: rgb(141, 134, 134);
 	text-align: center;
 	font-size: 1.4rem;
 	margin-bottom: 1rem;
@@ -412,7 +420,9 @@ p {
 
 #blog .post {
 	margin: 1rem auto;
+	text-align: left;
 	background-color: rgba(0, 0, 0, .03);
+	font-family: 'Roboto', sans-serif;
 }
 
 #blog .card-body {
